--- a/index.html
+++ b/index.html
@@ -24,19 +24,17 @@
     </style>
     <script>
         function searchCertificate(event) {
-            event.preventDefault(); // ফর্ম সাবমিট হওয়া আটকায়
+            event.preventDefault(); 
             const regNumber = document.getElementById('searchInput').value.trim();
             if (regNumber) {
-                // নতুন result.html পেজে reg প্যারামিটারসহ ইউজারকে পাঠাবে
                 window.location.href = `result.html?reg=${encodeURIComponent(regNumber)}`;
             } else {
                 alert("দয়া করে একটি রেজিস্ট্রেশন নম্বর দিন!");
             }
         }
 
-        // সার্চ বাটন ক্লিক হ্যান্ডলার
         function handleSearch() {
-            const fakeEvent = { preventDefault: () => {} }; // dummy event
+            const fakeEvent = { preventDefault: () => {} }; 
             searchCertificate(fakeEvent);
         }
     </script>
@@ -50,17 +48,14 @@
             <div class="container mx-auto px-4 flex justify-between items-center">
                 <div class="flex items-center space-x-4">
                     <div class="flex items-center space-x-1">
-                        <!-- Phone Icon -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" /></svg>
                         <span>+8801733339707, +880173049915</span>
                     </div>
                     <div class="flex items-center space-x-1">
-                        <!-- Mail Icon -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" /></svg>
                         <span>info@gpiasiatel.com.bd</span>
                     </div>
                     <div class="hidden md:flex items-center space-x-1">
-                        <!-- Clock Icon -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
                         <span>Saturday-Thursday - 09:00AM - 06:00PM</span>
                     </div>
@@ -73,12 +68,10 @@
 
         <!-- Main Navigation -->
         <nav class="container mx-auto px-4 py-3 flex justify-between items-center">
-            <!-- Logo -->
             <a href="https://gpiasiatel.com.bd" id="logo-container">
                 <img src="https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/ca20f4b78f796a5f352677cd0e06aa9fdee4e938/foldername/GPI-AsiaTel-Logo-e1716128485650.png" alt="GPI AsiaTel Logo" class="h-10">
             </a>
 
-            <!-- Menu Items -->
             <div class="hidden lg:flex items-center space-x-6 text-gray-700 font-medium">
                 <a href="https://gpiasiatel.com.bd/" class="nav-link">Home</a>
                 <a href="https://gpiasiatel.com.bd/service/" class="nav-link">Service ▾</a>
@@ -87,7 +80,6 @@
                 <a href="https://gpiasiatel.com.bd/#" class="nav-link">Company ▾</a>
             </div>
 
-            <!-- Contact Button Only -->
             <div class="flex items-center space-x-4">
                 <a href="https://gpiasiatel.com.bd/contact-us/" class="contact-btn text-white font-semibold px-5 py-2 rounded-md">Contact Us</a>
             </div>
@@ -116,6 +108,11 @@
         <h2 class="text-2xl font-bold mb-4 text-center">Search Result</h2>
         <div id="searchResult" class="bg-white p-6 rounded-lg shadow-md min-h-[200px] flex items-center justify-center">
             <p class="text-gray-500">Enter a registration number to see the result.</p>
+        </div>
+
+        <!-- ✅ ৭টা বক্স JSON থেকে লোড হবে -->
+        <div id="imageGrid" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mt-10">
+            <!-- Images will be injected here -->
         </div>
     </main>
 
@@ -181,6 +178,57 @@
             </div>
         </div>
     </footer>
+
+    <!-- Script for loading images -->
+    <script>
+        // 👉 এখানে আপনার GitHub JSON raw লিঙ্ক বসান
+        const jsonUrl = "https://raw.githubusercontent.com/username/repo/branch/images.json";
+
+        async function loadImages() {
+            try {
+                const res = await fetch(jsonUrl);
+                const data = await res.json();
+
+                const container = document.getElementById("imageGrid");
+                container.innerHTML = "";
+
+                if (data.images && data.images.length > 0) {
+                    data.images.slice(0, 7).forEach((url, index) => {
+                        const box = document.createElement("div");
+                        box.className = "bg-white rounded-lg shadow-md overflow-hidden flex items-center justify-center";
+                        box.innerHTML = `<img src="${url}" alt="Image ${index+1}" class="object-cover w-full h-40">`;
+                        container.appendChild(box);
+                    });
+                } else {
+                    container.innerHTML = `<p class="text-gray-500 col-span-4 text-center">No images found in JSON.</p>`;
+                }
+            } catch (error) {
+                console.error("Image load failed:", error);
+
+                // ফেইল হলে ডেমো ইমেজ দেখাবে
+                const fallbackImages = [
+                    "https://via.placeholder.com/200x150?text=1",
+                    "https://via.placeholder.com/200x150?text=2",
+                    "https://via.placeholder.com/200x150?text=3",
+                    "https://via.placeholder.com/200x150?text=4",
+                    "https://via.placeholder.com/200x150?text=5",
+                    "https://via.placeholder.com/200x150?text=6",
+                    "https://via.placeholder.com/200x150?text=7"
+                ];
+
+                const container = document.getElementById("imageGrid");
+                container.innerHTML = "";
+                fallbackImages.forEach((url, index) => {
+                    const box = document.createElement("div");
+                    box.className = "bg-white rounded-lg shadow-md overflow-hidden flex items-center justify-center";
+                    box.innerHTML = `<img src="${url}" alt="Demo ${index+1}" class="object-cover w-full h-40">`;
+                    container.appendChild(box);
+                });
+            }
+        }
+
+        window.onload = loadImages;
+    </script>
 
 </body>
 </html>
