--- a/result.html
+++ b/result.html
@@ -16,64 +16,67 @@
     <style>
         body {
             font-family: 'Noto Sans Bengali', sans-serif;
-            background: linear-gradient(135deg, #e6f0fa 0%, #f8fafc 100%);
+            background: linear-gradient(180deg, #1e3a8a 0%, #3b82f6 100%);
             min-height: 100vh;
             display: flex;
             flex-direction: column;
             align-items: center;
             margin: 0;
-            padding: 1.5rem;
-            color: #1f2937;
+            padding: 2rem;
+            color: #111827;
         }
         a { 
-            color: #2563eb; 
+            color: #60a5fa; 
             text-decoration: none; 
-            transition: color 0.2s ease; 
+            transition: color 0.3s ease; 
         }
         a:hover { 
-            color: #1e40af; 
+            color: #93c5fd; 
             text-decoration: underline; 
         }
         #loader { 
             text-align: center; 
-            padding: 3rem; 
-            font-size: 1.25rem; 
-            color: #4b5563; 
+            padding: 4rem; 
+            font-size: 1.5rem; 
+            color: #f3f4f6; 
+            background: rgba(0, 0, 0, 0.3); 
+            border-radius: 1rem; 
         }
         .not-found { 
             text-align: center; 
-            padding: 3rem; 
-            color: #dc2626; 
-            background: #fef2f2; 
+            padding: 2rem; 
+            color: #fef2f2; 
+            background: #dc2626; 
             border-radius: 0.75rem; 
-            max-width: 32rem; 
-            margin: 1rem auto; 
+            max-width: 36rem; 
+            margin: 2rem auto; 
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2); 
         }
         .certificate-container {
             max-width: 64rem;
             margin: 2rem auto;
             background: #ffffff;
-            border-radius: 1rem;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            border-radius: 1.25rem;
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.15);
             overflow: hidden;
-            padding: 2rem;
+            padding: 2.5rem;
             position: relative;
-            border: 1px solid #e5e7eb;
+            border: 2px solid #dbeafe;
         }
         .certificate-container::before {
             content: "";
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 24rem;
-            height: 24rem;
-            transform: translate(-50%, -50%) rotate(-10deg);
+            width: 20rem;
+            height: 20rem;
+            transform: translate(-50%, -50%) rotate(-12deg);
             background-image: url('https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/main/foldername/WhatsApp_Image_2025-08-28_at_3.14.15_PM-removebg-preview.png');
             background-repeat: no-repeat;
             background-position: center;
             background-size: contain;
-            opacity: 0.05;
-            filter: blur(2px);
+            opacity: 0.04;
+            filter: blur(3px);
             z-index: 0;
         }
         .certificate-container > * { 
@@ -84,85 +87,109 @@
             display: flex; 
             justify-content: flex-end; 
             max-width: 64rem; 
-            margin: 1rem auto; 
-            gap: 0.5rem; 
+            margin: 1.5rem auto; 
+            gap: 0.75rem; 
         }
         .lang-toggle button {
-            padding: 0.5rem 1.25rem;
+            padding: 0.75rem 1.5rem;
             border-radius: 0.5rem;
             border: none;
-            background: #2563eb;
-            color: white;
-            font-weight: 500;
+            background: #1e40af;
+            color: #ffffff;
+            font-weight: 600;
+            font-size: 1rem;
             cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
         .lang-toggle button:hover:enabled { 
-            background: #1e40af; 
-            transform: translateY(-1px); 
+            background: #1d4ed8; 
+            transform: scale(1.05); 
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2); 
         }
         .lang-toggle button:disabled { 
-            background: #9ca3af; 
+            background: #6b7280; 
             cursor: not-allowed; 
+            box-shadow: none; 
         }
         .cert-header { 
-            padding: 1.5rem; 
+            padding: 2rem; 
             text-align: center; 
-            background: linear-gradient(to bottom, #f8fafc, #ffffff); 
+            background: linear-gradient(to bottom, #eff6ff, #ffffff); 
+            border-bottom: 2px solid #dbeafe; 
         }
         .company-logo { 
-            max-height: 5rem; 
+            max-height: 6rem; 
             object-fit: contain; 
+            transition: transform 0.3s ease; 
+        }
+        .company-logo:hover { 
+            transform: scale(1.05); 
         }
         .cert-body { 
             display: flex; 
             align-items: center; 
-            padding: 2rem; 
-            gap: 1.5rem; 
+            padding: 2.5rem; 
+            gap: 2rem; 
             flex-wrap: wrap; 
+            background: #f9fafb; 
+            border-radius: 0.75rem; 
         }
         .profile-picture-container { 
-            flex: 0 0 10rem; 
+            flex: 0 0 12rem; 
             text-align: center; 
         }
         .profile-picture { 
-            width: 10rem; 
-            height: 10rem; 
+            width: 12rem; 
+            height: 12rem; 
             border-radius: 50%; 
             object-fit: cover; 
-            border: 3px solid #2563eb; 
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
+            border: 4px solid #3b82f6; 
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15); 
+            transition: transform 0.3s ease; 
+        }
+        .profile-picture:hover { 
+            transform: scale(1.03); 
         }
         .person-info { 
             flex: 1; 
             text-align: left; 
         }
         .person-info .name { 
-            font-size: 1.75rem; 
+            font-size: 2rem; 
             margin: 0; 
-            color: #1f2937; 
+            color: #111827; 
             font-weight: 700; 
+            line-height: 1.2; 
         }
         .person-info .designation { 
-            font-size: 1.25rem; 
-            margin: 0.25rem 0; 
-            color: #2563eb; 
-            font-weight: 500; 
+            font-size: 1.5rem; 
+            margin: 0.5rem 0; 
+            color: #1e40af; 
+            font-weight: 600; 
         }
         .person-info .company { 
-            font-size: 1.125rem; 
+            font-size: 1.25rem; 
             color: #4b5563; 
+            font-weight: 400; 
         }
         .cert-details { 
-            margin: 1.5rem; 
-            padding: 0.5rem; 
+            margin: 2rem; 
+            padding: 1rem; 
+            background: #ffffff; 
+            border-radius: 0.5rem; 
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05); 
         }
         .detail-item { 
-            padding: 0.75rem 0; 
-            border-bottom: 1px solid #e5e7eb; 
-            font-size: 1rem; 
+            padding: 1rem 0; 
+            border-bottom: 1px dashed #d1d5db; 
+            font-size: 1.125rem; 
             display: flex; 
             justify-content: space-between; 
+            transition: background 0.2s ease; 
+        }
+        .detail-item:hover { 
+            background: #f3f4f6; 
         }
         .detail-key { 
             font-weight: 600; 
@@ -175,38 +202,40 @@
             display: flex; 
             justify-content: space-between; 
             align-items: center; 
-            margin: 1.5rem; 
-            padding: 0.75rem 1.5rem; 
-            color: #6b7280; 
-            font-size: 0.875rem; 
+            margin: 2rem; 
+            padding: 1rem 1.5rem; 
+            background: #f9fafb; 
+            border-radius: 0.5rem; 
         }
         .qr-code { 
-            width: 5rem; 
-            height: 5rem; 
+            width: 6rem; 
+            height: 6rem; 
         }
         .reg-number { 
             font-weight: 600; 
-            font-size: 1.125rem; 
-            color: #1f2937; 
+            font-size: 1.25rem; 
+            color: #111827; 
         }
         .back-button {
             position: fixed;
-            top: 1rem;
-            left: 1rem;
-            padding: 0.5rem 1.25rem;
+            top: 1.5rem;
+            left: 1.5rem;
+            padding: 0.75rem 1.5rem;
             border-radius: 0.5rem;
             border: none;
-            background: #374151;
-            color: white;
-            font-size: 1rem;
-            font-weight: 500;
+            background: #1e40af;
+            color: #ffffff;
+            font-size: 1.125rem;
+            font-weight: 600;
             cursor: pointer;
             z-index: 1000;
-            transition: background-color 0.3s ease, transform 0.2s ease;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
         .back-button:hover { 
-            background: #1f2937; 
-            transform: translateY(-1px); 
+            background: #1d4ed8; 
+            transform: scale(1.05); 
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2); 
         }
         @media print {
             body { 
@@ -218,7 +247,7 @@
                 border: none; 
             }
             .certificate-container::before { 
-                opacity: 0.03; 
+                opacity: 0.02; 
             }
             #loader, .not-found, .back-button, .lang-toggle, #download-btn { 
                 display: none; 
@@ -229,13 +258,14 @@
                 flex-direction: column; 
                 align-items: center; 
                 text-align: center; 
+                padding: 1.5rem; 
             }
             .person-info { 
                 text-align: center; 
             }
             .cert-footer { 
                 flex-direction: column; 
-                gap: 0.75rem; 
+                gap: 1rem; 
                 align-items: center; 
             }
             .detail-item { 
@@ -243,8 +273,16 @@
                 text-align: center; 
             }
             .profile-picture { 
-                width: 8rem; 
-                height: 8rem; 
+                width: 9rem; 
+                height: 9rem; 
+            }
+            .lang-toggle { 
+                flex-direction: column; 
+                align-items: flex-end; 
+            }
+            .lang-toggle button { 
+                width: 100%; 
+                max-width: 12rem; 
             }
         }
     </style>
