--- a/result.html
+++ b/result.html
@@ -16,42 +16,42 @@
     <style>
         body {
             font-family: 'Noto Sans Bengali', 'Inter', sans-serif;
-            background: #f8fafc;
+            background: #f8fafc; /* Lighter background */
             margin: 0;
             padding: 20px;
             text-align: center;
             color: #333;
         }
-        a { color: #d1a95a; text-decoration: none; }
+        a { color: #3b82f6; text-decoration: none; } /* Modern blue for links */
         a:hover { text-decoration: underline; }
         #loader { text-align: center; padding: 50px; font-size: 20px; color: #555; }
-        .not-found { text-align: center; padding: 50px; color: #ef4444; }
+        .not-found { text-align: center; padding: 50px; color: #ef4444; } /* Brighter error red */
 
         .certificate-container {
             max-width: 900px;
             margin: 20px auto;
             background: #ffffff;
-            border-radius: 12px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+            border-radius: 12px; /* Slightly less rounded */
+            box-shadow: 0 10px 25px rgba(0,0,0,0.08); /* Softer shadow */
             overflow: hidden;
-            padding: 50px;
+            padding: 50px; /* More internal padding */
             position: relative;
-            background-image: linear-gradient(to bottom, #f8fafc 0%, #ffffff 100%);
+            border: 1px solid #e2e8f0; /* Subtle border */
         }
         .certificate-container::before {
             content: "";
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 550px;
+            width: 550px; /* Slightly larger watermark */
             height: 550px;
-            transform: translate(-50%, -50%) rotate(-10deg);
+            transform: translate(-50%, -50%) rotate(-10deg); /* Less aggressive rotation */
             background-image: url('https://raw.githubusercontent.com/gpiasiatel/gpiasiatel.github.io/main/7photo/WhatsApp_Image_2025-08-28_at_3.14.15_PM-removebg-preview.png');
             background-repeat: no-repeat;
             background-position: center;
             background-size: contain;
-            opacity: 0.03;
-            filter: blur(0.5px);
+            opacity: 0.03; /* Even lighter watermark */
+            filter: blur(0.5px); /* Softer blur */
             z-index: 0;
         }
         .certificate-container > * { position: relative; z-index: 1; }
@@ -61,29 +61,25 @@
             padding: 10px 22px;
             margin-left: 12px;
             cursor: pointer;
-            border-radius: 8px;
+            border-radius: 8px; /* Slightly less rounded for a cleaner look */
             border: none;
-            background: #1f2937;
+            background: #3b82f6; /* Modern blue */
             color: white;
-            font-weight: 600;
+            font-weight: 600; /* Slightly bolder */
             transition: background-color 0.3s ease, transform 0.2s ease;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Softer shadow for buttons */
         }
-        .lang-toggle button:hover:enabled { background: #374151; transform: translateY(-1px); }
-        .lang-toggle button:disabled { background: #cbd5e1; cursor: not-allowed; }
+        .lang-toggle button:hover:enabled { background: #2563eb; transform: translateY(-1px); }
+        .lang-toggle button:disabled { background: #cbd5e1; cursor: not-allowed; } /* Lighter disabled state */
 
         .cert-header {
             background-color: transparent;
-            padding: 0 0 30px 0;
+            padding: 0 0 30px 0; /* More space */
             text-align: center;
-            border-bottom: 1px solid #d1d5db;
+            border-bottom: 1px solid #e5e7eb; /* Light, clean separator */
             margin-bottom: 30px;
-            /* Flexbox for centering logo */
-            display: flex;
-            justify-content: center;
-            align-items: center;
         }
-        .company-logo { max-height: 110px; object-fit: contain; }
+        .company-logo { max-height: 110px; object-fit: contain; } /* Slightly larger logo */
 
         .cert-body {
             display: flex;
@@ -92,36 +88,36 @@
             text-align: center;
             padding: 20px 0;
         }
-        .profile-picture-container { margin-bottom: 25px; }
-        .profile-picture { width: 160px; height: 160px; border-radius: 50%; object-fit: cover; border: 4px solid #d1a95a; }
+        .profile-picture-container { margin-bottom: 25px; } /* More space */
+        .profile-picture { width: 160px; height: 160px; border-radius: 50%; object-fit: cover; border: 4px solid #3b82f6; } /* Modern blue border */
         .person-info { margin-top: 15px; }
-        .person-info .name { font-size: 38px; margin: 0; color: #1f2937; font-weight: 700; }
-        .person-info .designation { font-size: 26px; margin: 8px 0; color: #d1a95a; }
-        .person-info .company { font-size: 20px; color: #6b7280; }
+        .person-info .name { font-size: 38px; margin: 0; color: #1f2937; font-weight: 700; } /* Larger, bolder name */
+        .person-info .designation { font-size: 26px; margin: 8px 0; color: #3b82f6; } /* Modern blue for designation */
+        .person-info .company { font-size: 20px; color: #6b7280; } /* Softer gray for company */
 
         .cert-details {
-            margin: 50px 0;
-            padding: 25px;
-            border: 1px solid #e5e7eb;
+            margin: 50px 0; /* More vertical space */
+            padding: 25px; /* More internal padding */
+            border: 1px solid #e5e7eb; /* Clean solid border */
             border-radius: 8px;
-            background-color: #f9fafb;
+            background-color: #fcfdfe; /* Very light background */
         }
-        .detail-item { padding: 15px 0; border-bottom: 1px solid #e5e7eb;
+        .detail-item { padding: 15px 0; border-bottom: 1px solid #f3f4f6; /* Very light separator */
             font-size: 18px; display: flex; justify-content: space-between; align-items: center; }
         .detail-item:last-child { border-bottom: none; }
-        .detail-key { font-weight: 600; color: #1f2937; }
-        .detail-value { color: #4b5563; }
+        .detail-key { font-weight: 600; color: #1f2937; } /* Bolder key */
+        .detail-value { color: #4b5563; } /* Slightly darker value */
 
         .cert-footer {
             display: flex;
             justify-content: space-between;
             align-items: flex-end;
-            margin-top: 50px;
+            margin-top: 50px; /* More space */
             padding-top: 30px;
-            border-top: 1px solid #d1d5db;
+            border-top: 1px solid #e5e7eb; /* Clean separator */
         }
-        .qr-code { width: 110px; height: 110px; }
-        .reg-number { font-weight: 700; font-size: 26px; color: #1f2937; text-align: right; }
+        .qr-code { width: 110px; height: 110px; } /* Slightly larger QR */
+        .reg-number { font-weight: 700; font-size: 26px; color: #1f2937; text-align: right; } /* Bolder reg number */
 
         .back-button {
             position: fixed;
@@ -131,7 +127,7 @@
             cursor: pointer;
             border-radius: 8px;
             border: none;
-            background: #4b5563;
+            background: #4b5563; /* Darker gray for back button */
             color: white;
             font-size: 16px;
             z-index: 1000;
@@ -142,41 +138,40 @@
         .back-button:hover { background: #374151; transform: translateY(-1px); }
 
         @media print {
-            body {
-                background-color: #fff;
-                margin: 0;
-                padding: 0;
+            body { 
+                background-color: #fff; 
+                margin: 0; 
+                padding: 0; 
                 font-family: 'Noto Sans Bengali', sans-serif;
             }
-            .certificate-container {
-                box-shadow: none;
-                margin: 0;
-                border-radius: 0;
-                background-image: none;
-                padding: 20mm;
+            .certificate-container { 
+                box-shadow: none; 
+                margin: 0; 
+                border-radius: 0; 
+                background-image: none; 
+                padding: 0; 
                 border: none;
-                width: 210mm;
-                min-height: 297mm;
+                width: 210mm; /* A4 width */
+                min-height: 297mm; /* A4 height */
                 display: flex;
                 flex-direction: column;
-                justify-content: space-between;
-                box-sizing: border-box;
+                justify-content: space-between; /* Distribute content nicely */
             }
-            .certificate-container::before { opacity: 0.03; width: 400px; height: 400px; }
+            .certificate-container::before { opacity: 0.03; width: 400px; height: 400px; } /* Smaller, fainter watermark for print */
             #loader, .not-found, .back-button, .lang-toggle, #download-btn { display: none; }
-
-            .cert-header { padding-top: 0; border-bottom: 1px solid #d1d5db; margin-bottom: 15mm; }
-            .company-logo { max-height: 70px; }
-            .cert-body { padding: 0; margin-bottom: 15mm; }
-            .profile-picture { width: 120px; height: 120px; border: 3px solid #d1a95a; }
-            .person-info .name { font-size: 28px; }
-            .person-info .designation { font-size: 20px; }
-            .person-info .company { font-size: 16px; }
-            .cert-details { margin: 0; padding: 10mm; border-radius: 0; border: 1px solid #e5e7eb; margin-bottom: 15mm; }
-            .detail-item { font-size: 15px; padding: 8px 0; }
-            .cert-footer { margin-top: 0; padding-top: 15mm; border-top: 1px solid #d1d5db; justify-content: space-around; }
-            .reg-number { font-size: 18px; }
-            .qr-code { width: 70px; height: 70px; }
+            
+            .cert-header { padding-top: 30px; border-bottom: 1px solid #e5e7eb; margin-bottom: 20px; }
+            .company-logo { max-height: 90px; }
+            .cert-body { padding: 15px 0; }
+            .profile-picture { width: 140px; height: 140px; border: 3px solid #3b82f6; }
+            .person-info .name { font-size: 32px; }
+            .person-info .designation { font-size: 22px; }
+            .person-info .company { font-size: 18px; }
+            .cert-details { margin: 25px 0; padding: 15px; border-radius: 0; border: 1px solid #e5e7eb; }
+            .detail-item { font-size: 16px; padding: 10px 0; }
+            .cert-footer { margin-top: 25px; padding-top: 15px; border-top: 1px solid #e5e7eb; justify-content: space-around; } /* More balanced footer for print */
+            .reg-number { font-size: 20px; }
+            .qr-code { width: 80px; height: 80px; }
         }
 
         @media (max-width: 600px) {
@@ -360,21 +355,14 @@
                     });
                     await new Promise(resolve => setTimeout(resolve, 300));
 
-                    // Hide QR code for html2canvas
-                    const qrCodeElement = tempContainer.querySelector('.qr-code');
-                    qrCodeElement.style.visibility = 'hidden';
-
                     const canvas = await html2canvas(tempContainer, {
-                        scale: 2, // Increased scale for better resolution
+                        scale: 1.5,
                         useCORS: true,
                         allowTaint: true,
                         ignoreElements: (element) => element.classList.contains('lang-toggle')
                     });
 
-                    // Show QR code again
-                    qrCodeElement.style.visibility = 'visible';
-
-                    const imgData = canvas.toDataURL('image/jpeg', 0.8); // Increased quality to 80%
+                    const imgData = canvas.toDataURL('image/jpeg', 0.6);
                     if (i > 0) pdf.addPage();
                     const imgProps = pdf.getImageProperties(imgData);
                     const pdfWidth = pdf.internal.pageSize.getWidth();
@@ -382,16 +370,6 @@
                     const ratio = imgProps.width / imgProps.height;
                     let imgHeight = pdfWidth / ratio;
                     pdf.addImage(imgData, 'JPEG', 0, (pdfHeight - imgHeight) / 2, pdfWidth, imgHeight, undefined, 'FAST');
-                
-                    // Capture and add QR code separately for perfect quality
-                    const qrCanvas = qrCodeElement.querySelector('canvas');
-                    if (qrCanvas) {
-                        const qrImgData = qrCanvas.toDataURL('image/png');
-                        const qrImgProps = pdf.getImageProperties(qrImgData);
-                        const qrX = 145; // Adjust x position as needed
-                        const qrY = 240; // Adjust y position as needed
-                        pdf.addImage(qrImgData, 'PNG', qrX, qrY, 25, 25); // Set a fixed size for the QR code
-                    }
                 }
 
                 pdf.save(`Certificate-${regNumber}.pdf`);
