--- a/result.html
+++ b/result.html
@@ -22,7 +22,7 @@
             text-align: center;
             color: #333;
         }
-        a { color: #c0a060; text-decoration: none; }
+        a { color: #1e40af; text-decoration: none; }
         a:hover { text-decoration: underline; }
         #loader { text-align: center; padding: 50px; font-size: 20px; color: #555; }
         .not-found { text-align: center; padding: 50px; color: #e74c3c; }
@@ -36,7 +36,6 @@
             overflow: hidden;
             padding: 40px;
             position: relative;
-            border: 2px solid #c0a060;
         }
         .certificate-container::before {
             content: "";
@@ -63,46 +62,45 @@
             cursor: pointer;
             border-radius: 25px;
             border: none;
-            background: #2c3e50;
+            background: #1e40af;
             color: white;
             font-weight: bold;
             transition: background-color 0.3s ease, transform 0.2s ease;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
-        .lang-toggle button:hover:enabled { background: #34495e; transform: translateY(-2px); }
+        .lang-toggle button:hover:enabled { background: #2563eb; transform: translateY(-2px); }
         .lang-toggle button:disabled { background: #95a5a6; cursor: not-allowed; }
 
         .cert-header {
             background-color: transparent;
             padding: 0 0 20px 0;
-            text-align: center;
+            text-align: left;
             border-bottom: 1px solid #c0a060;
             margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+            gap: 15px;
         }
-        .company-logo { max-height: 100px; object-fit: contain; }
+        .company-logo { max-height: 50px; object-fit: contain; }
 
         .cert-body {
             display: flex;
-            flex-direction: column;
             align-items: center;
-            text-align: center;
+            gap: 20px;
+            text-align: left;
             padding: 20px 0;
         }
-        .profile-picture-container { margin-bottom: 20px; }
-        .profile-picture { width: 180px; height: 180px; border-radius: 50%; object-fit: cover; border: 4px solid #c0a060; }
+        .profile-picture { width: 100px; height: 100px; border-radius: 50%; object-fit: cover; border: 4px solid #1e40af; }
         .person-info { margin-top: 10px; }
-        .person-info .name { font-size: 36px; margin: 0; color: #2c3e50; font-weight: bold; }
-        .person-info .designation { font-size: 24px; margin: 5px 0; color: #c0a060; }
-        .person-info .company { font-size: 20px; color: #555; }
+        .person-info .name { font-size: 26px; margin: 0; color: #2c3e50; font-weight: bold; }
+        .person-info .designation { font-size: 18px; margin: 5px 0; color: #1e40af; }
+        .person-info .company { font-size: 16px; color: #555; }
 
         .cert-details {
             margin: 40px 0;
             padding: 20px;
-            border: 1px dashed #bdc3c7;
-            border-radius: 10px;
-            background-color: #f9f9f9;
         }
-        .detail-item { padding: 10px 0; border-bottom: 1px dashed #e0e0e0; font-size: 18px; display: flex; justify-content: space-between; align-items: center; }
+        .detail-item { padding: 10px 0; border-bottom: 1px dashed #e0e0e0; font-size: 16px; display: flex; justify-content: space-between; align-items: center; }
         .detail-item:last-child { border-bottom: none; }
         .detail-key { font-weight: bold; color: #2c3e50; }
         .detail-value { color: #555; }
@@ -113,10 +111,11 @@
             align-items: flex-end;
             margin-top: 40px;
             padding-top: 20px;
-            border-top: 1px solid #c0a060;
+            border-top: 1px solid #1e40af;
         }
         .qr-code { width: 100px; height: 100px; }
-        .reg-number { font-weight: bold; font-size: 24px; color: #2c3e50; text-align: right; }
+        .reg-number { font-weight: bold; font-size: 18px; color: #2c3e50; text-align: right; }
+        .footer-logo { max-height: 40px; object-fit: contain; }
 
         .back-button {
             position: fixed;
@@ -138,19 +137,34 @@
 
         @media print {
             body { background-color: #fff; margin: 0; padding: 0; font-family: 'Noto Sans Bengali', sans-serif; }
-            .certificate-container { box-shadow: none; margin: 0; border-radius: 0; background-image: none; padding: 0; border: none; }
-            .certificate-container::before { opacity: 0.04; }
+            .certificate-container { 
+                box-shadow: none; 
+                margin: 0; 
+                border-radius: 0; 
+                background-image: none; 
+                padding: 10mm 15mm;
+                border: none; 
+                width: 210mm;
+                min-height: 297mm;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                box-sizing: border-box;
+            }
+            .certificate-container::before { opacity: 0.04; width: 400px; height: 400px; }
             #loader, .not-found, .back-button, .lang-toggle, #download-btn { display: none; }
-            .cert-header { padding-top: 30px; border-bottom: 1px solid #c0a060; }
-            .cert-body { padding: 20px 0; }
-            .profile-picture { width: 150px; height: 150px; border: 3px solid #c0a060; }
-            .person-info .name { font-size: 30px; }
-            .person-info .designation { font-size: 22px; }
-            .cert-details { margin: 20px 0; padding: 15px; border-radius: 0; border: 1px dashed #bdc3c7; }
-            .detail-item { font-size: 16px; }
-            .cert-footer { margin-top: 30px; border-top: 1px solid #c0a060; }
-            .reg-number { font-size: 20px; }
-            .qr-code { width: 80px; height: 80px; }
+            .cert-header { padding-top: 0; border-bottom: 1px solid #1e40af; margin-bottom: 10mm; }
+            .company-logo { max-height: 40px; }
+            .cert-body { padding: 0; margin-bottom: 10mm; }
+            .profile-picture { width: 90px; height: 90px; border: 3px solid #1e40af; }
+            .person-info .name { font-size: 24px; }
+            .person-info .designation { font-size: 16px; }
+            .person-info .company { font-size: 14px; }
+            .cert-details { margin: 0; padding: 0; }
+            .detail-item { font-size: 14px; padding: 8px 0; }
+            .cert-footer { margin-top: 15mm; padding-top: 10mm; border-top: 1px solid #1e40af; }
+            .reg-number { font-size: 16px; }
+            .qr-code { width: 60px; height: 60px; }
         }
 
         @media (max-width: 600px) {
@@ -158,7 +172,10 @@
             .cert-body { flex-direction: column; align-items: center; text-align: center; }
             .person-info { text-align: center; }
             .cert-footer { flex-direction: column; gap: 10px; align-items: center; }
-            .detail-item { flex-direction: column; text-align: center; }
+            .detail-item { flex-direction: column; text-align: center; align-items: center; }
+            .lang-toggle { text-align: center; }
+            .lang-toggle button { margin: 5px; }
+            .back-button { top: 10px; left: 10px; padding: 8px 16px; font-size: 14px; }
         }
     </style>
 </head>
@@ -332,13 +349,13 @@
                     await new Promise(resolve => setTimeout(resolve, 300));
 
                     const canvas = await html2canvas(tempContainer, {
-                        scale: 1.5,
+                        scale: 2,
                         useCORS: true,
                         allowTaint: true,
                         ignoreElements: (element) => element.classList.contains('lang-toggle')
                     });
-
-                    const imgData = canvas.toDataURL('image/jpeg', 0.6);
+                    const imgData = canvas.toDataURL('image/jpeg', 0.8);
+                    
                     if (i > 0) pdf.addPage();
                     const imgProps = pdf.getImageProperties(imgData);
                     const pdfWidth = pdf.internal.pageSize.getWidth();
